@@ -27,6 +27,7 @@
 #define MESSAGE_RECIPIENT_CHANNELS     		0x008
 #define MESSAGE_RECIPIENT_ANNOUNCE     		0x040
 #define MESSAGE_RECIPIENT_AUTHED                0x080
+#define MESSAGE_RECIPIENT_RCHANNELS    		0x100
 
 #define MESSAGE_OPTION_SOURCELESS		0x010
 #define MESSAGE_OPTION_IMMEDIATE		0x020
