@@ -3,6 +3,16 @@ X3 ChangeLog
 
 2008-12-27  Neil Spierling  <sirvulcan@sirvulcan.co.nz>
 
+	* src/global.c: Added RCHANNELS which will send notices to all
+	registered channels. Also changed CHANNELS to notice all channels
+	instead of registered ones only.
+
+	* src/global.h: Added RCHANNELS.
+
+	* src/global.help: Added RCHANNELS target.
+
+2008-12-27  Neil Spierling  <sirvulcan@sirvulcan.co.nz>
+
 	* src/global.c: Added AUTHED target.
 
 	* src/global.h: Added AUTHED target.
